--- a/src/styles.scss
+++ b/src/styles.scss
@@ -194,8 +194,6 @@ $hopper-light-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-body { 
-  margin: 0;
-  // font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-.pointer { cursor: pointer; }
+body                    { margin: 0; }
+.pointer                { cursor: pointer; }
+.material-icons:before  { display: none; }
