--- a/projects/angular-sdk/src/styles/theme.scss
+++ b/projects/angular-sdk/src/styles/theme.scss
@@ -5,7 +5,6 @@
 @import "../components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss";
 @import "../components/cfar-offer-dialog/cfar-offer-dialog.component.scss";
 @import "../components/cfar-exercise-flow/cfar-exercise-flow.component.scss";
-// @import "../components/event-button/event-button.component.scss";
 
 // Define a mixin for easier access
 @mixin hopper-cloud-airlines-angular-sdk-components-theme($theme) {
@@ -13,8 +12,13 @@
   @include cfar-offer-banner-large-theme($theme);
   @include cfar-offer-dialog-theme($theme);
   @include cfar-exercise-flow-theme($theme);
-  // @include event-button-theme($theme);
 }
+
+// ------------------------------------------
+// GLOBAL STYLE
+// ------------------------------------------
+
+.material-icons:before { display: none; }
 
 // ------------------------------------------
 // LIGHT BLUE THEME
