HCAP-528 and HCAP-538

--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -152,34 +152,7 @@
                                                         {{ segment?.arrivalDateTime | date: ('COMMON.DATE_FORMAT.DATE' | translate):'':currentLang }}
                                                     </div>
                                                 </div>
-            
-                                                <!--
-                                                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px"
-                                                    class="mb-16">
-                                                    <mat-icon color="accent" class="rotate-90">flight</mat-icon>
-                                                    <span class="subtitle">
-                                                        {{ segment?.originAirport }}
-                                                        {{ 'CFAR_EXERCISE_FLOW.TO' | translate }}
-                                                        {{ segment?.destinationAirport }}
-                                                    </span>
-                                                </div>
-            
-                                                <div class="ml-32">
-                                                    <p>
-                                                        <b>{{ 'CFAR_EXERCISE_FLOW.DEPARTURE' | translate }}</b>
-                                                        {{ segment?.departureDateTime | date: ('COMMON.DATE_FORMAT_SHORT' | translate):'':currentLang }}
-                                                    </p>
-                                                    <p>
-                                                        <b>{{ 'CFAR_EXERCISE_FLOW.ARRIVAL' | translate }}</b>
-                                                        {{ segment?.arrivalDateTime | date: ('COMMON.DATE_FORMAT_SHORT' | translate):'':currentLang }}
-                                                    </p>
-                                                    <p>
-                                                        <b>{{ 'CFAR_EXERCISE_FLOW.FLIGHT' | translate }}</b>
-                                                        {{ segment?.flightNumber }}
-                                                    </p>
-                                                </div>
-                                                -->
-            
+        
                                             </div>
             
                                         </ng-container>
@@ -338,7 +311,7 @@
             
                                 <div class="p-16" fxLayoutGap="16px" ngClass.lt-md="px-16" fxFlex="100" fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="center center">
                                     <button mat-raised-button color="accent" (click)="onSubmitStep2()" ngClass.lt-sm="full-width" 
-                                        [disabled]="step2Form.invalid" attr.aria-label="{{ 'CFAR_EXERCISE_FLOW.BUTTON.CONTINUE' | translate }}">
+                                        [disabled]="step2Form.invalid || isLoadingHyperwallet" attr.aria-label="{{ 'CFAR_EXERCISE_FLOW.BUTTON.CONTINUE' | translate }}">
                                         {{ 'CFAR_EXERCISE_FLOW.BUTTON.CONTINUE' | translate }}
                                     </button>
                                 </div>
