--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
@@ -43,8 +43,7 @@
                 height: 0px;
 
                 .provided-by-image {
-                    margin-top: 1rem;
-                    height: 1.5rem;
+                    margin-top: 20px;
                     background: white;
                     position: relative;
                     padding: 4px 16px;
