--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.scss
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.scss
@@ -42,7 +42,7 @@
         .card-content {
             max-width: 100%;
 
-            mat-vertical-stepper {
+            mat-stepper {
                 width: 100%;
             }
 
