--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.scss
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.scss
@@ -95,6 +95,7 @@
                 font-size: 32px;
                 width: 32px;
                 height: 32px;
+                overflow: unset;
             }
 
             .decorative-stroke {
