--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,16 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat.core();
+// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
+//  The following line adds:
+//    1. Default typography styles for all components
+//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
+//  If you specify typography styles for the components you use elsewhere, you should delete this line.
+//  If you don't need the default component typographies but still want the hierarchy styles,
+//  you can delete this line and instead use:
+//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
+@include mat.all-legacy-component-typographies();
+@include mat.legacy-core();
 
 $dark-primary-text: rgba(black, 0.87);
 $light-primary-text: white;
@@ -142,7 +151,7 @@ $hopper-light-theme: mat.define-light-theme((
 
 .theme-dark-hopper {
   // Apply the theme to all Angular Material Components
-  @include mat.all-component-themes($hopper-dark-theme);
+  @include mat.all-legacy-component-themes($hopper-dark-theme);
 
   // Apply the theme to the library components
   @include hopper-cloud-airlines-angular-sdk-components-theme($hopper-dark-theme);
@@ -153,7 +162,7 @@ $hopper-light-theme: mat.define-light-theme((
 
 .theme-light-hopper {
   // Apply the theme to all Angular Material Components
-  @include mat.all-component-themes($hopper-light-theme);
+  @include mat.all-legacy-component-themes($hopper-light-theme);
 
   // Apply the theme to the library components
   @include hopper-cloud-airlines-angular-sdk-components-theme($hopper-light-theme);
@@ -168,7 +177,7 @@ $hopper-light-theme: mat.define-light-theme((
 
 .theme-light-blue {
   // Apply the theme to all Angular Material Components
-  @include mat.all-component-themes($light-blue-theme);
+  @include mat.all-legacy-component-themes($light-blue-theme);
 
   // Apply the theme to the library components
   @include hopper-cloud-airlines-angular-sdk-components-theme($light-blue-theme);
@@ -179,7 +188,7 @@ $hopper-light-theme: mat.define-light-theme((
 
 .theme-light-yellow {
   // Apply the theme to all Angular Material Components
-  @include mat.all-component-themes($light-yellow-theme);
+  @include mat.all-legacy-component-themes($light-yellow-theme);
 
   // Apply the theme to the library components
   @include hopper-cloud-airlines-angular-sdk-components-theme($light-yellow-theme);
