--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -1,6 +1,6 @@
 <div ngClass.gt-md="px-32" ngClass.gt-sm="px-16" ngClass.lt-md="px-0" fxLayout="row" fxLayoutAlign="center center">
 
-    <mat-card ngClass.gt-sm="mat-elevation-z4" fxFlex fxLayout="row wrap">
+    <mat-card class="p-16" fxFlex fxLayout="row wrap">
 
         <div fxFlex="100" class="header" fxLayout="row" fxLayoutAlign="center center">
             <h1>{{ 'CFAR_EXERCISE_FLOW.TITLE' | translate }}</h1>
