--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -5,7 +5,7 @@
         <span class="p-16">{{ 'CFAR_OFFER_BANNER_LARGE.WARNING_MESSAGE' | translate }}</span>
     </div>
 
-    <mat-card fxFlex="100" *ngIf="cfarOffers" class="mat-elevation-z4 m-16 pointer" fxLayout="row wrap">
+    <mat-card fxFlex="100" *ngIf="cfarOffers" class="p-16 m-16 pointer" fxLayout="row wrap">
 
         <div fxFlex="100" fxLayout="row wrap">
 
