--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
@@ -25,15 +25,15 @@
     // ----------------------------------------------
 
     hopper-cfar-offer-banner-large {
-        .mat-button, 
-        .mat-flat-button, 
-        .mat-icon-button, 
-        .mat-raised-button,
-        .mat-stroked-button { 
+        .mat-mdc-button, 
+        .mat-mdc-unelevated-button, 
+        .mat-mdc-icon-button, 
+        .mat-mdc-raised-button,
+        .mat-mdc-outlined-button { 
             border-radius: 0px; 
         }
-
-        .mat-radio-label {
+        
+        .mat-mdc-radio-label {
             white-space: normal;
         }
 
@@ -44,9 +44,10 @@
             color: black;
         }
         
-        mat-card {
+        .mat-mdc-card {
             border: 1px solid map-get($accent-palette, "A200") !important;
             border-radius: 0px;
+            @include mat.elevation(4);
 
             .provided-by-image {
                 background: white;
@@ -58,6 +59,10 @@
             .check-icon {
                 font-weight: bold;
                 color: green;
+                font-size: 1.5rem;
+                height: 1.5rem;
+                min-width: 1.5rem;
+                width: 1.5rem;
             }
     
             .offer-title {
