--- a/src/app/pages/guides/cfar-offer-dialog/cfar-offer-dialog.component.scss
+++ b/src/app/pages/guides/cfar-offer-dialog/cfar-offer-dialog.component.scss
@@ -29,8 +29,8 @@
 
             .tab-group {
                 @include mat.elevation(4);
-    
-                mat-tab-body {
+                
+                .mat-mdc-tab-body {
                     background-color: map-get($bg-palette, card);
 
                     .hljs {
