--- a/src/app/shared/components/inputs/inputs.component.scss
+++ b/src/app/shared/components/inputs/inputs.component.scss
@@ -33,10 +33,10 @@
             color: red;
         }
 
-        .mat-header-row {
+        .mat-mdc-header-row {
             background-color: map-get($primary-palette, 500);
             
-            .mat-header-cell {
+            .mat-mdc-header-cell {
                 color: map-get($primary-palette, "500-contrast");
             }
         }
