--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -40,25 +40,22 @@
                 overflow: auto;
                 background-color: map-get($bg-palette, app-bar);
                 @include mat.elevation(4);
-
-                .mat-list-base {
-                    padding: 0px;
-
-                    .mat-list-single-selected-option,
-                    .mat-list-single-selected-option:hover,
-                    .mat-list-single-selected-option:focus {
-                        background-color: map-get($accent-palette, default);
-                        color: map-get($accent-palette, "default-contrast")
-                    }
-                }  
             }
 
             .sidenav-container {
                 height: calc(100% - 64px);
                 z-index: 0;
             }
+
             .content {
                 overflow: auto;
+            }
+
+            .mat-icon {
+                font-size: 1.5rem;
+                height: 1.5rem;
+                min-width: 1.5rem;
+                width: 1.5rem;
             }
         }
     }
