--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -87,7 +87,9 @@
             </div>
 
             <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
-                <img class="provided-by-image" src="{{ imageBasePath || '' }}assets/provided-by-hopper/{{ currentLang || 'en' }}.svg" />
+                <a href="https://hts.hopper.com/" target="_blank">
+                    <img class="provided-by-image" src="{{ imageBasePath || '' }}assets/provided-by-hopper/{{ currentLang || 'en' }}.svg" />
+                </a>
             </div>
             
         </div>
