--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -11,7 +11,9 @@
     </div>
 
     <div fxFlex="100" class="provided-by-container">
-        <img class="provided-by-image" src="{{ imageBasePath || '' }}assets/provided-by-hopper/{{ currentLang || 'en' }}.svg" />
+        <a href="https://hts.hopper.com/" target="_blank">
+            <img class="provided-by-image" src="{{ imageBasePath || '' }}assets/provided-by-hopper/{{ currentLang || 'en' }}.svg" />
+        </a>
     </div>
 
 </div>
