--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -14,7 +14,7 @@
                 <ng-container *ngIf="errorCode">
                     <div fxFlex="100" class="error-message m-16" fxLayout="row" fxLayoutAlign="start center">
                         <mat-icon>error</mat-icon>
-                        <span class="p-16">{{ ('COMMON.ERROR_CODE.' + errorCode) | translate }}</span>
+                        <span class="p-16">{{ errorMessage }}</span>
                     </div>
                 </ng-container>
                 <!-- / ERROR MESSAGE -->
